ornithe update & fixes & tickfreeze command

--- a/common.gradle
+++ b/common.gradle
@@ -34,14 +34,10 @@ configurations {
 
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
+	mappings ploceus.featherMappings(project.feather_build)
 	if (mcVersion < 10802) {
-		mappings loom.layered {
-			mappings "net.ornithemc:feather:${project.minecraft_version}+build.${project.feather_build}:v2"
-			addLayer ploceus.nestedMappings()
-		}
-		nests "net.ornithemc:nests:${project.minecraft_version}+build.${project.nests_build}"
-	} else {
-		mappings "net.ornithemc:feather:${project.minecraft_version}+build.${project.feather_build}:v2"
+//		nests "net.ornithemc:nests:${project.minecraft_version}+build.${project.nests_build}"
+		nests ploceus.nests(project.nests_build)
 	}
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 }
