--- a/gradle.properties
+++ b/gradle.properties
@@ -9,8 +9,9 @@ mod_version = 0.2.0
 maven_group = com.kahzerx
 archives_base_name = ornithe-carpet
 
+# Dependencies - check https://ornithemc.net/develop for the latest versions
 # Dependencies
 #minecraft_version = 1.13.2
-feather_build = 26
-loader_version = 0.15.10
+feather_build = 27
+loader_version = 0.16.2
 nests_build = 1
